completed projects section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,92 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    background-color: #ffffff;
+  --primary-heading-color: #141c3a;
+  --primary-para-color: rgba(10, 10, 10, 0.9);
+  --secondary-color: #6E07F3;
+  font-size: 18px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+
+
+@font-face{
+  font-family: "eurostile";
+  src:url("/fonts/eurostile.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face{
+  font-family: "eurostile-bold";
+  src:url("/fonts/eurostile-bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+} 
+
+@font-face{
+  font-family:"europa";
+  src: url("/fonts/europa.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@font-face{
+  font-family:"europa-bold";
+  src: url("/fonts/europa-bold.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/*
+.font-europa{
+  font-family: 'europa';
 }
+.font-europa-bold{
+  font-family: 'europa-bold';
+}
+.font-eurostile{
+  font-family: 'eurostile';
+}
+ .w-90{
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 2rem;
+}
+.w-80{
+  width: 80%;
+  margin: 0 auto;
+}
+.bg-white{
+  background-color:'#ffffff' 
+}
+.text-heading{
+  color: #141c3a;
+}
+.text-para{
+  color: rgba(10, 10, 10, 0.9)
+}
+.text-secondary{
+  color: "#6E07F3";
+}
+.main-heading{
+  color: #141c3a;
+  font-family: 'eurostile';
+  font-weight: 900;
+  font-size: 3.5rem;
+}
+.flex{
+  display: flex;
+}
+.flex-col{
+  flex-direction: column;
+}
+.justify-between{
+  justify-content: space-between;
+}
+.logo{
+  width: 3.5rem;
+} */
